--- a/nxtecs/assets/css/skills.css
+++ b/nxtecs/assets/css/skills.css
@@ -4,91 +4,115 @@
 .team {
     background: #fff;
     padding: 60px 0;
-  }
-  
-  .team .member {
+}
+.team h2 {
+    background: #fff;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ea5822;
+}
+.section-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.section-title hr {
+border-top: 2px dotted #ea5852;
+width: 100px;
+}
+
+.team .member {
     margin-bottom: 20px;
     overflow: hidden;
     border-radius: 5px;
     background: #fff;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  }
-  
-  .team .member .member-img {
+}
+
+.team .member .member-img {
     position: relative;
     overflow: hidden;
-  }
-  
-  .team .member .social {
+}
+
+.team .member .social {
     position: absolute;
     left: 0;
     bottom: 30px;
     right: 0;
     opacity: 0;
-    transition: ease-in-out 0.3s;
+    transition: ease-in-out 0.5s;
     text-align: center;
-  }
-  
-  .team .member .social a {
-    transition: color 0.3s;
+}
+
+.team .member .social a {
+    transition: color 0.5s;
     color: #151515;
     margin: 0 3px;
     border-radius: 4px;
     width: 36px;
     height: 36px;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(249, 159, 40, 0.8);
     transition: ease-in-out 0.3s;
     color: #484848;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .team .member .social a:hover {
+}
+
+.team .member .social a:hover {
     color: #151515;
     background: #ea5822;
-  }
-  
-  .team .member .social i {
+}
+
+.team .member .social i {
     font-size: 18px;
     line-height: 0;
-  }
-  
-  .team .member .member-info {
+}
+
+.team .member .member-info {
     padding: 25px 15px;
-  }
-  
-  .team .member .member-info h4 {
+}
+
+.team .member .member-info h4 {
     font-weight: 700;
     margin-bottom: 5px;
     font-size: 18px;
     color: #151515;
-  }
-  
-  .team .member .member-info span {
+}
+
+.team .member .member-info span {
     display: block;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 400;
-    color: #aaaaaa;
-  }
-  
-  .team .member .member-info p {
+    color: #7d7676;
+}
+
+.team .member .member-info p {
     font-style: italic;
     font-size: 14px;
     line-height: 26px;
     color: #777777;
-  }
-  
-  .team .member:hover .social {
+}
+
+.team .member:hover .social {
     opacity: 1;
-    bottom: 15px;
-  }
-  
-  .team .member .member-info button {
-background-color: #ea5822;
-color: white;
-width: 40%;
-cursor: pointer;
+    bottom: 5px;
+}
+
+.team .member .member-info button {
+    background-color: rgba(249, 159, 40, 0.8);
+    color: white;
+    width: 40%;
+    cursor: pointer;
+    border: none;
 
 
+}
+.team .member .member-info button:hover {
+    background-color: #ea5822;
+    transition: ease-in-out 0.5s;
+    
 }
