--- a/nxtecs/assets/css/devops.css
+++ b/nxtecs/assets/css/devops.css
@@ -119,14 +119,15 @@ width: 100px;
 
 /* book a call*/
 
-input[type=text], input[type=password] {
-    width: 100%;
+input[type=text], input[type=tel], input[type=email], input[type=address] {
+    width: 80%;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
+    display: block;
     border: 1px solid #ccc;
     box-sizing: border-box;
   }
+ 
   
   /* Set a style for all buttons */
   button {
@@ -146,7 +147,7 @@ input[type=text], input[type=password] {
   /* Extra styles for the cancel button */
   .cancelbtn {
     width: auto;
-    padding: 10px 18px;
+    padding: 14px 20px;
     background-color: #f44336;
   }
   
