--- a/nxtecs/assets/css/devops.css
+++ b/nxtecs/assets/css/devops.css
@@ -131,7 +131,7 @@ input[type=text], input[type=tel], input[type=email], input[type=address] {
   
   /* Set a style for all buttons */
   button {
-    background-color: #04AA6D;
+    background-color: #04AA;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
