--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -89,6 +89,7 @@ button {
 
 button:focus, input:focus, input:focus, textarea, textarea:focus {
   outline: 0;
+  border: 1px solid #ccc;
 }
 
 .uppercase {
