--- a/nxtecs/assets/css/devops.css
+++ b/nxtecs/assets/css/devops.css
@@ -119,7 +119,7 @@ width: 100px;
 
 /* book a call*/
 
-input[type=text], input[type=tel], input[type=email], input[type=address] {
+input[type=text], input[type=tel], input[type=email], input[type=address], textarea[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
