--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -40,7 +40,7 @@
 /*  01. Theme default CSS
 /*----------------------------------------*/
 /* 1. Theme default css */
-@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;500;600;700&amp;family=IBM+Plex+Sans:wght@400;500;600;700&amp;family=Roboto:wght@400;500;700;900&amp;display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
   font-family: "hind";
@@ -111,7 +111,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "roboto";
+  font-family: "poppins";
   color: #062a35;
   margin-top: 0px;
   font-style: normal;
