--- a/nxtecs/assets/css/devops.css
+++ b/nxtecs/assets/css/devops.css
@@ -132,7 +132,7 @@ input[type=text], input[type=tel], input[type=email], input[type=address], texta
   
   /* Set a style for all buttons */
   button {
-    background-color: #04AA;
+    background-color: #002356;
     color: white;
     
     margin: 8px 0;
