--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -2251,7 +2251,7 @@ label {
 
 .page-title-area {
   width: 100%;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 535px;
@@ -2279,7 +2279,7 @@ label {
 
 .page-title-area::before {
   content: "";
-  position: absolute;
+  /*position: absolute;*/
   background: #141414;
   opacity: 0.65;
   width: 100%;
@@ -4355,7 +4355,7 @@ label {
 
 .gallery-text h3 {
   font-size: 30px;
-  color: white;
+  color: #FFd112;
   margin-bottom: 7px;
   letter-spacing: -0.3px;
 }
@@ -4410,7 +4410,7 @@ label {
 }
 
 .inner-team-icon>a {
-  background: #ea5822;
+  background: #002356;
   color: white;
   font-size: 16px;
   height: 45px;
@@ -4426,7 +4426,8 @@ label {
   transition: 0.3s;
   padding: 8px 6px;
   opacity: 0;
-  background: white;
+  background: #002356;
+  border-radius: 30px 30px 0px 0px;
   width: 45px;
   transform: translateY(55PX);
   margin-bottom: -1px;
@@ -5597,7 +5598,7 @@ label {
   content: "";
   font-family: "Flaticon";
   bottom: 40px;
-  color: #ea5822;
+  color: #002356;
   font-size: 130px;
   line-height: 1;
 }
@@ -5712,14 +5713,14 @@ label {
 }
 
 .client-say-content>span {
-  color: #ea5822;
+  color: #4688eb;
   font-size: 14px;
   text-transform: capitalize;
   font-weight: 600;
 }
 
 .testimonial-active button.slick-arrow {
-  background: #eaf4f7;
+  background: #002356;
   height: 40px;
   width: 40px;
   left: 74px;
@@ -5730,7 +5731,7 @@ label {
   text-align: center;
   
   border-radius: 0;
-  color: #062a35;
+  color: #ffd112;
   font-size: 16px;
   cursor: pointer;
   border: none;
