--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -4501,7 +4501,7 @@ label {
 }
 
 .team-meta span i {
-  color: #ea5822;
+  color: #ffa812;
   padding-right: 5px;
 }
 
@@ -6479,7 +6479,7 @@ label {
 
 .blog-content h5 {
   font-size: 18px;
-  color: #ea5822;
+  color: #4688eb;
   margin-bottom: 0;
   font-weight: 500;
   padding-top: 5px;
