--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -2856,7 +2856,7 @@ label {
 .hero-slider-caption span {
   font-size: 18px;
   font-weight: 600;
-  color: #002356;
+  color: #4688eb;
   text-transform: capitalize;
 }
 
