--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -3350,7 +3350,7 @@ label {
 }
 
 .course-cat-text h4 a:hover {
-  color: #4688eb;
+  color: #002356;
 }
 
 .course-cat-text h4>span {
@@ -4900,7 +4900,7 @@ label {
 }
 
 .events-text h3>a:hover {
-  color: #ea5822;
+  color: #002356;
 }
 
 .events-text p {
