--- a/single.css
+++ b/single.css
@@ -1,5 +1,71 @@
 
-#first {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'poppins', sans-serif;
+}
+.showcase {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  min-height: 100vh;
+  padding: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #111;
+  color: #fff;
+  z-index: 2;
+}
+.showcase header {
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ padding: 40px 100px;
+ z-index: 1000;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
+.logo {
+  cursor: pointer;
+}
+
+.toggle {
+position: relative;
+width: 60px;
+height: 60px;
+background: url(menu.png);
+background-repeat: no-repeat;
+background-size: 30px;
+background-position: center;
+cursor: pointer;
+}
+.toggle.active {
+  background: url(close.png);
+background-repeat: no-repeat;
+background-size: 25px;
+background-position: center;
+cursor: pointer;
+}
+
+.showcase video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
+
+/* #first {
   position: relative;
   height: 100vh;
   width: 100%;
@@ -21,7 +87,7 @@
   transform: translate(-50%, -50%);
   color: #fff;
   text-align: center;
-}
+} 
 
 #second {
   padding: 50px;
@@ -41,7 +107,7 @@ th, td {
   border: 1px solid black;
   padding: 10px;
   text-align: center;
-} */
+}
 
 
 *{
@@ -50,9 +116,9 @@ th, td {
   box-sizing: border-box;
 }
 body{
-  background: #72abc6;
+  background: #f1f6f9;
   font-family: poppins;
-  color: #fff;
+  color: #121111;
 }
 .services{
   width: 1300px;
@@ -84,7 +150,7 @@ body{
 }
 .card{
   width: calc(34% - 22px);
-  background: #f2f2f2;
+  background: #8aeb88;
   color: #333;
   padding: 40px 12px;
   margin: 0 30px;
@@ -142,4 +208,4 @@ body{
 .card:hover:after{
   transform: rotate(13deg);
   background-color: rgb(0, 184, 148);
-}
+} */
