--- a/single/single.css
+++ b/single/single.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 
 * {
@@ -7,6 +6,7 @@
   padding: 0;
   font-family: 'poppins', sans-serif;
 }
+
 .showcase {
   position: absolute;
   right: 0;
@@ -19,49 +19,156 @@
   background: #111;
   color: #fff;
   z-index: 2;
+  transition: 0.5s;
 }
+
+.showcase.active {
+  right: 300px;
+}
+
 .showcase header {
- position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- padding: 40px 100px;
- z-index: 1000;
- display: flex;
- align-items: center;
- justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px 100px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .logo {
   cursor: pointer;
 }
 
 .toggle {
-position: relative;
-width: 60px;
-height: 60px;
-background: url(menu.png);
-background-repeat: no-repeat;
-background-size: 30px;
-background-position: center;
-cursor: pointer;
-}
-.toggle.active {
-  background: url(close.png);
-background-repeat: no-repeat;
-background-size: 25px;
-background-position: center;
-cursor: pointer;
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: url(menu.png);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
 }
 
-.showcase video {
+.toggle.active {
+  background: url(close.png);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
+}
+
+.showcase img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  opacity: 0.8;
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #3b4143;
+  mix-blend-mode: overlay;
+
+}
+
+.text {
+  position: relative;
+  z-index: 10;
+
+}
+
+.text h2 {
+  font-size: 5em;
+  font-weight: 800;
+  line-height: 1em;
+
+}
+
+.text h3 {
+  font-size: 4em;
+  font-weight: 700;
+  line-height: 1em;
+
+}
+
+.text p {
+  font-size: 1.1em;
+  margin: 20px 0;
+  font-weight: 400;
+  max-width: 700px;
+}
+
+.text a {
+  display: inline-block;
+  font-size: 1em;
+  background: #fff;
+  padding: 10px 30px;
+  text-decoration: none;
+  color: #111;
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.2s;
+}
+
+.text a:hover {
+  letter-spacing: 6px;
+}
+
+.menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: beige;
+}
+
+.menu ul {
+  position: relative;
+  list-style: none;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #111;
+
+}
+
+.menu ul li a:hover {
+  color: #03a9f4;
+}
+
+@media (max-width: 798px) {
+
+  .showcase,
+  .showcase header {
+    padding: 40px;
+  }
+
+  .text h2 {
+    font-size: 3em;
+  }
+
+  .text h3 {
+    font-size: 2em;
+  }
+}
 
 
 
@@ -87,14 +194,14 @@ cursor: pointer;
   transform: translate(-50%, -50%);
   color: #fff;
   text-align: center;
-} 
+} */
 
 #second {
   padding: 50px;
   text-align: center;
 }
 
-/*#third {
+,m0 ;#third {
   padding: 50px;
 }
 
@@ -110,22 +217,15 @@ th, td {
 }
 
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body{
-  background: #f1f6f9;
-  font-family: poppins;
-  color: #121111;
-}
-.services{
+
+
+.services {
   width: 1300px;
-  padding: 30px 60px;
+  padding-top: 700px;
   margin: auto;
 }
-.services h1{
+
+.services h1 {
   text-align: center;
   font-size: 36px;
   margin-top: 50px;
@@ -133,7 +233,8 @@ body{
   position: relative;
   font-weight: 600;
 }
-.servcies h1:after{
+
+.servcies h1:after {
   content: '';
   position: absolute;
   left: 50%;
@@ -143,12 +244,14 @@ body{
   height: 3px;
   background-color: #fff;
 }
-.cards{
+
+.cards {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.card{
+
+.card {
   width: calc(34% - 22px);
   background: #8aeb88;
   color: #333;
@@ -159,22 +262,26 @@ body{
   transition: 0.3s;
   position: relative;
 }
-.sbox i{
+
+.sbox i {
   font-size: 36px;
-  border: 1px solid rgba(0,0,0,0.5);
+  border: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   padding: 15px;
   transition: 0.5s;
 }
-.sbox h3{
+
+.sbox h3 {
   font-size: 24px
 }
-.sbox p{
+
+.sbox p {
   margin: 20px 0;
 }
-.sbox a{
+
+.sbox a {
   text-decoration: none;
-  color:#fff;
+  color: #fff;
   font-size: 16px;
   font-weight: 500;
   background: #333;
@@ -183,29 +290,33 @@ body{
   transition: 0.5s;
   margin: 20px 0;
 }
-.sbox a:hover{
+
+.sbox a:hover {
   background: transparent;
   border: 1px solid #333;
   transform: scale(1.2);
   background: rgb(0, 184, 148);
 }
-.card:hover .sbox i{
+
+.card:hover .sbox i {
   background: rgb(0, 184, 148);
-  color:#fff ;
+  color: #fff;
   border-color: rgb(0, 184, 148);
 }
-.card:after{
+
+.card:after {
   content: '';
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0,0.3);
+  background: rgba(0, 0, 0, 0.3);
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
   transition: 0.5s;
 }
-.card:hover:after{
+
+.card:hover:after {
   transform: rotate(13deg);
   background-color: rgb(0, 184, 148);
-} */
+}
