--- a/preview.colorlib.com/theme/instylr/css/style.css
+++ b/preview.colorlib.com/theme/instylr/css/style.css
@@ -162,7 +162,7 @@ ol {
 	text-transform: uppercase;
 	color: #fff;
 	line-height: normal;
-	border: 3px solid #fff;
+	border: 3px solid #111;
 	cursor: pointer;
 	text-align: center;
 	background: transparent;
@@ -401,12 +401,18 @@ ol {
 }
 
 .owl-item.active .hs-item h2,
+.owl-item.active .hs-item h4,
 .owl-item.active .hs-item .site-btn {
 	top: 0;
 	opacity: 1;
 }
 
 .owl-item.active .hs-item h2 {
+	-webkit-transition: all 0.5s ease 0.2s;
+	transition: all 0.5s ease 0.2s;
+}
+
+.owl-item.active .hs-item .h4 {
 	-webkit-transition: all 0.5s ease 0.2s;
 	transition: all 0.5s ease 0.2s;
 }
