--- a/preview.colorlib.com/theme/instylr/css/style.css
+++ b/preview.colorlib.com/theme/instylr/css/style.css
@@ -162,7 +162,7 @@ ol {
 	text-transform: uppercase;
 	color: #fff;
 	line-height: normal;
-	border: 3px solid #111;
+	border: 3px solid #fff;
 	cursor: pointer;
 	text-align: center;
 	background: transparent;
