--- a/one/navigation/navigation.css
+++ b/one/navigation/navigation.css
@@ -134,9 +134,177 @@ a:hover,a.active {
 }
 }
 
-
-section {
-    background: url(WhatsApp\ Image\ 2023-02-08\ at\ 17.47.21.jpeg) no-repeat;
+.hero {
+    background-image: url("https://images.unsplash.com/photo-1677504210148-e39caba87b4f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1MXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60");
     background-size: cover;
-    height: calc(100vh - 80px);
-}
+    background-position: center;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hero {
+      height: 300px;
+    }
+  }
+  
+  .hero-content {
+    text-align: center;
+    color: #fff;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hero-content {
+      padding: 20px;
+    }
+  }
+  
+  .hero h1 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hero h1 {
+      font-size: 2rem;
+    }
+  }
+  
+  .hero p {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hero p {
+      font-size: 1rem;
+    }
+  }
+  
+  .hero-button {
+    display: inline-block;
+    background-color: #fff;
+    color: #333;
+    font-size: 1.2rem;
+    padding: 10px 30px;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: all 0.3s;
+  }
+  
+  .hero-button:hover {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hero-button {
+      font-size: 1rem;
+      padding: 8px 24px;
+    }
+  }
+  
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 50px 30px 50px 30px;
+  }
+  
+  .card {
+    position: relative;
+    margin-bottom: 40px;
+    overflow: hidden;
+    width: calc(25% - 20px);
+    
+  }
+
+  .card-content {
+    text-align: center;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .card {
+      width: calc(50% - 20px);
+    }
+  }
+  @media screen and (max-width: 1082px) {
+    .card {
+      width: calc(50% - 20px);
+    }
+  }
+  .card img {
+    width: 100%;
+    height: 350px;
+    display: block;
+  }
+  
+  .card-content {
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    width: 100%;
+    padding: 20px;
+    transition: bottom 0.5s;
+  }
+  
+  .card:hover .card-content {
+    bottom: 0px;
+  }
+  
+  .card h2 {
+    margin-top: 0;
+    font-size: 24px;
+  }
+  
+  .card p {
+    margin-bottom: 20px;
+  }
+  
+  .card-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 3px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .card-button:hover {
+    background-color: #000;
+    color: #fff;
+  }
+  
+  .card-social-icons {
+    position: absolute;
+    bottom: 40px;
+    left: 20px;
+    opacity: 0;
+    transition: bottom 0.5s, opacity 0.5s;
+  }
+  
+  .card:hover .card-social-icons {
+    bottom: 0;
+    opacity: 1;
+
+  }
+  
+  .card-social-icons a {
+    display: inline-block;
+    margin-left: 60px;
+    color: #fff;
+    font-size: 20px;
+    padding-bottom: 0px;
+    
+  }
+  
+  .card-social-icons a:hover {
+    color: #000;
+  }
+  
