--- a/foody/theme/foody/css/style.css
+++ b/foody/theme/foody/css/style.css
@@ -568,7 +568,7 @@ header {
     position: relative;
     width: 0px;
     font-size: 30px;
-    color: #ff7404; }
+    color: #970995; }
 
 .text-black {
   color: #000 !important; }
@@ -804,7 +804,7 @@ header {
   border-radius: 50%;
   position: relative;
   display: block;
-  background: #ff7404; }
+  background: #970995; }
   .wrap-icon > span {
     font-size: 2rem;
     color: #fff;
