--- a/nxtecs/assets/css/main.css
+++ b/nxtecs/assets/css/main.css
@@ -8336,7 +8336,7 @@ padding-top: 20px;
   align-items: center;
   justify-content: center;
   height: 50px;
-  padding-top: 30px
+  padding-top: 0px
 }
 
 .inner-content1 {
@@ -8358,9 +8358,19 @@ cursor: pointer;
 	width:80px;
 	height:80px;
 	bottom:40px;
-	left: 40px;
+	left: 30px;
 	text-align:center;
-  font-size:30px;
+  
   z-index:1;
 }
 
+@media (max-width: 767px) {
+  .float img {
+    position:fixed;
+    width:50px;
+    height:50px;
+    bottom:40px;
+    left: 20px;
+    text-align:center;
+  }
+}
